--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Run e2e tests
         run: npm run test:e2e
+      
+      - name: Deploy to production
+        run: curl ${{ secrets.RENDER_DEPLOY_HOOK }}
